--- a/app/heroes/heroes.component.css
+++ b/app/heroes/heroes.component.css
@@ -14,9 +14,12 @@
   left: 0;
   background-color: #EEE;
   margin: .5em;
-  padding: .3em 0;
+  padding: 0.3em 0.3em 0.3em 0;
   height: 1.6em;
   border-radius: 4px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .heroes li.selected:hover {
   background-color: #792e5c !important;
